<resources>
  <string name="app_name">My WhatsApp App</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="logout">logout</string>
  <string name="settings">settings</string>
  <string name="about">about</string>
  <string name="call">Call</string>
  <string name="voicecall">Voice Call</string>
  <string name="video">Video</string>
  <string name="menu_setting">Menu Settings</string>
  <string name="stared_message">Starred Message</string>
  <string name="whatsapp_web">Whatsapp Web</string>
  <string name="new_broadcast">New Broadcast</string>
  <string name="new_group">New Group</string>
  <string name="searchbox">Search</string>
  <string name="calls">CALLS</string>
  <string name="chats">CHATS</string>
  <string name="status">STATUS</string>
  <string name="tap_to_add_status_update">Tap to add status update</string>
  <string name="my_status">My status</string>
  <string name="recent_updates">Recent Updates</string>
  <string name="todo">TODO</string>
  <string name="username">Username</string>

</resources>