<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/AppBar"
    >

  <group android:id="@+id/MenuOne" android:background="@color/AppBar">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/searchbox"

        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuAbout"
        android:title="@string/new_group"
        android:background="@color/AppBar"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuSettings"
        android:title="@string/new_broadcast"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuLogout"
        android:title="@string/whatsapp_web"
        app:showAsAction="never" />


    <item
        android:id="@+id/menu1Logout"
        android:title="@string/stared_message"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu1Settings"
        android:title="@string/menu_setting"
        app:showAsAction="never" />

  </group>

  <group android:id="@+id/MenuTwo">
    <item
        android:id="@+id/vcall"
        android:icon="@drawable/ic_baseline_videocam_24"
        android:title="@string/video"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/voicecall"
        android:icon="@drawable/ic_baseline_call_24"
        android:title="@string/voicecall"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/logout"
        android:title="@string/call"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/setting"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/inbox_logout"
        android:title="@string/logout"
        app:showAsAction="never" />

  </group>

</menu>